# Euler

./: .gitignore  CMakeLists.txt
Problem1/: CMakeLists.txt  main.cpp
Problem2/: CMakeLists.txt  main.cpp
Problem3/: CMakeLists.txt  main.cpp
Problem4/: CMakeLists.txt  main.cpp
Problem5/: CMakeLists.txt  main.cpp
Problem6/: CMakeLists.txt  main.cpp
Problem7/: CMakeLists.txt  main.cpp
Problem8/: CMakeLists.txt  main.cpp
