project(Euler)
cmake_minimum_required(VERSION 2.8)
add_subdirectory(Problem1)
add_subdirectory(Problem2)
add_subdirectory(Problem3)
add_subdirectory(Problem4)
add_subdirectory(Problem5)
add_subdirectory(Problem6)
add_subdirectory(Problem7)
add_subdirectory(Problem8)
set(CMAKE_CXX_FLAGS "-std=c++17")
